# opentelemetry-python-contrib

./: DEBUG_BOOTSTRAP_README.md  PROJECT_ANALYSIS.md  PYTHONPATH说明文档.md  Python_Java_Context_Propagation_Comparison.md  case_auto_instrumentation.py  case_bootstrap.py  demo_environment_variables.py  opentelemetry-bootstrap安装插件分析.md  opentelemetry-distro和opentelemetry-instrumentation原理分析.md  run函数执行流程详解.md  判断是否安装库的流程分析.md  环境变量模块注册-快速参考.md  环境变量模块注册机制详解.md
instrumentation-genai/opentelemetry-instrumentation-langchain/: LangChain_Instrumentation_分析.md
instrumentation/opentelemetry-instrumentation-demo-mycache/: README.md  README.rst  pyproject.toml
instrumentation/opentelemetry-instrumentation-demo-mycache/src/opentelemetry/instrumentation/demo_mycache/: __init__.py  package.py  version.py
instrumentation/opentelemetry-instrumentation-demo-mycache/tests/: demo_usage.py  mock_mycache.py
opentelemetry-instrumentation/src/opentelemetry/instrumentation/: OpenTelemetry_Instrument_深度分析.md  bootstrap.py
opentelemetry-instrumentation/src/opentelemetry/instrumentation/auto_instrumentation/: __init__.py  _load.py
